# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-16 15:58:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-79

    Summary:
      Documented and renamed HVIO
    Revision:
      missingh--head--0.7--patch-79


    modified files:
     ChangeLog libsrc/MissingH/IO/HVIO.hs

    renamed files:
     libsrc/MissingH/HVIO.hs
       ==> libsrc/MissingH/IO/HVIO.hs


2004-12-15 22:59:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-78

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-78


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 22:23:31 GMT	John Goerzen <jgoerzen@complete.org>	patch-77

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-77


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 20:45:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-76

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-76


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 20:34:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-75

    Summary:
      Mroe EOF corrections
    Revision:
      missingh--head--0.7--patch-75


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 20:29:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-74

    Summary:
      Fixed EOF handling in HVIO code
    Revision:
      missingh--head--0.7--patch-74


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 20:12:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-73

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-73


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 19:42:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-72

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-72


    modified files: