@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2004-12-16 16:15:03 GMT	John Goerzen <jgoerzen@complete.org>	patch-80
+
+    Summary:
+      Checkpointing more HVIO docs
+    Revision:
+      missingh--head--0.7--patch-80
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/IO/HVIO.hs
+
+
 2004-12-16 15:58:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-79
 
     Summary:
